--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,16 +1,17 @@
 .nav{
     display: flex;
     width:100%;
-
     justify-content: space-around;
     align-items: center;
     text-align: center;
     position: absolute;
     top: 0.1rem;
 }
+
 /* * {
   outline: 1px solid red; 
 } */
+
 .nav ul {
     list-style-type: none;
     display: flex;
@@ -36,7 +37,6 @@ a:hover {
 
 .hamburger {
     display: none;
-
 }
 
 @media (max-width: 768px) {
@@ -69,11 +69,14 @@ a:hover {
     /* fill the whole hamburger menu after open without any transparency between nav */
     padding-top: 5rem;
     top: calc(100% + 50px);  
-
+    padding-bottom: 10rem;
+    border-radius: 0 0 10px 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 
 .nav ul li { 
     width: 100%; 
+    margin-bottom: 1.5rem;
 }
 
 .logo {
@@ -83,7 +86,7 @@ a:hover {
     top: 2rem;
 }
 
-.hamburger {
+.hamburger { 
     position:absolute;
     display: block;
     cursor: pointer;
@@ -91,29 +94,24 @@ a:hover {
     margin-right: 2rem;
     right: 0;
     top: 2rem;
-
 }
 
 .hamburger span{
-
     display: block;
     width: 30px;
     height: 4px;
     background-color: black;
     margin: 5px;
     transition: all 0.3s ease-in-out;
-        
 }
 
 .hamburger.open {
     top: 2rem; 
     cursor: pointer;
-    /* margin-left: 23rem; */
 }     
 
 .hamburger.open span:nth-child(1) {
     transform: rotate(45deg) translate(5px, 7.5px);
-
 }
 
 .hamburger.open span:nth-child(2) {
@@ -122,7 +120,6 @@ a:hover {
 
 .hamburger.open span:nth-child(3) {
     transform: rotate(-45deg) translate(5px, -7.5px);
-
 }
 
 
